@@ -2,14 +2,14 @@ package org.asmeta.parser.util;
 
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 import org.asmeta.parser.ASMParser;
-import org.asmeta.parser.Utility;
+import org.asmeta.parser.AsmetaParserUtility;
 
 import asmeta.AsmCollection;
 import asmeta.definitions.Function;
@@ -48,7 +48,7 @@ public class ImportFlattener {
 	 */
 	public ImportFlattener(Asm asm, String folder) {
 		// check that exists and it is a directory
-		assert Files.exists(Paths.get(folder)) && Files.isDirectory(Paths.get(folder));
+		assert Files.exists(Path.of(folder)) && Files.isDirectory(Path.of(folder));
 		this.folder = folder;
 		this.asm = asm;
 
@@ -102,10 +102,10 @@ public class ImportFlattener {
 		if (list != null) {
 			for (ImportClause ic : list) {
 				moduleName = ic.getModuleName();
-				if (!moduleName.endsWith(Utility.STANDARD_LIBRARY_NAME) && !moduleName.endsWith(Utility.CTL_LIBRARY_NAME)
-						&& !moduleName.endsWith(Utility.LTL_LIBRARY_NAME)) {
+				if (!moduleName.endsWith(AsmetaParserUtility.STANDARD_LIBRARY_NAME) && !moduleName.endsWith(AsmetaParserUtility.CTL_LIBRARY_NAME)
+						&& !moduleName.endsWith(AsmetaParserUtility.LTL_LIBRARY_NAME)) {
 					// Import the file
-					file = Utility.importFile(folder, ic);
+					file = AsmetaParserUtility.importFile(folder, ic);
 					asms = null;
 					try {
 						asms = ASMParser.setUpReadAsm(file);
